sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:7: error: value toBouble is not a member of Int
      ecart=(ecart.toBouble/1.3).toInt
                   ^AlgCombSort:18: error: missing arguments for method | in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
  }while( ecart > 1 | inversement=true )
                    ^